Fix: color name 변경

--- a/agijagi/app/src/main/res/layout/fragment_custom_option.xml
+++ b/agijagi/app/src/main/res/layout/fragment_custom_option.xml
@@ -157,7 +157,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="ex) 멋쟁이(초록) + 사자(주황) + 부트(검정)"
-                        android:textColorHint="@color/jagi_inactiveText" />
+                        android:textColorHint="@color/jagi_white_30" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -185,7 +185,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="ex) 왼쪽 위 + 오른쪽 위 + 오른쪽 아래 + 왼쪽 아래"
-                        android:textColorHint="@color/jagi_inactiveText" />
+                        android:textColorHint="@color/jagi_white_30" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -300,7 +300,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="수량 선택"
-                    android:textColorHint="@color/jagi_inactiveText" />
+                    android:textColorHint="@color/jagi_white_30" />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -332,7 +332,7 @@
             android:layout_marginBottom="4dp"
             android:background="@drawable/wide_box_rounded_purchase_button_solid"
             android:text="구매하기"
-            android:textColor="@color/hint_color"
+            android:textColor="@color/jagi_hint_color"
             android:textSize="16dp" />
 
     </LinearLayout>
