--- a/agijagi/app/src/main/res/layout/fragment_product_add.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_add.xml
@@ -181,7 +181,7 @@
                         android:id="@+id/editinput_product_add_productname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="상품명을 입력해주세요" />
+                        android:hint="상품명을 입력해주세요"
                         android:maxLines="1" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -209,7 +209,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="카테고리 선택"
-                    android:textColorHint="@color/jagi_gray"
+                    android:textColorHint="@color/jagi_black_42"
                     app:hintEnabled="true">
 
                     <AutoCompleteTextView
@@ -227,7 +227,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="주문제작 가능 여부 선택"
-                    android:textColorHint="@color/jagi_gray"
+                    android:textColorHint="@color/jagi_black_42"
                     app:hintEnabled="true">
 
                     <AutoCompleteTextView
