Squashed commit of the following:
commit 44a45f9d51061e56bf20fb16fc2f3ef2d22ce5fc
Author: June <66195205+june0103@users.noreply.github.com>
Date:   Fri Aug 25 17:08:26 2023 +0900

    Design: order, purchase UI 수정 #6 (#39)

    * Design: Order 및 purchase 화면 코드작업 #6

    * Design: payment UI 수정 #6
    버튼 visiblilty 수정
    Drop 힌트 수정
    margin 수정

    * Design: purchase UI #6
    결제완료화면 UI 작업

commit b1a6ebc77f200b55c5c5e9529a446753233fa105
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 16:00:28 2023 +0900

    Fix: color name 변경

commit 7a9f8c9fb7ef7dafd1a289851c1b6bd3d02296e6
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 15:24:31 2023 +0900

    Design: ShoppingList page를 Navigation Graph에 배치 #5
    mainactivity에 네비게이션 숨김 추가

commit 3ac1cac40edb17db3acc56d07a22d85afc601de9
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 15:22:33 2023 +0900

    Design: ProductOption 주문 제작 선택 화면 구현 #5

commit 42e735898af0a9524bfa606b4a9247f6f3021200
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 15:22:01 2023 +0900

    Design: ProductOption 기성품 선택 화면 구현 #5

--- a/agijagi/app/src/main/res/layout/fragment_product_add.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_add.xml
@@ -208,7 +208,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="카테고리 선택"
-                    android:textColorHint="@color/jagi_gray"
+                    android:textColorHint="@color/jagi_black_42"
                     app:hintEnabled="true">
 
                     <AutoCompleteTextView
@@ -226,7 +226,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="주문제작 가능 여부 선택"
-                    android:textColorHint="@color/jagi_gray"
+                    android:textColorHint="@color/jagi_black_42"
                     app:hintEnabled="true">
 
                     <AutoCompleteTextView
