--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -36,6 +36,33 @@
             app:destination="@id/homeFragment" />
     </fragment>
     <fragment
+        android:id="@+id/orderFragment"
+        android:name="likelion.project.agijagi.order.OrderFragment"
+        android:label="fragment_order"
+        tools:layout="@layout/fragment_order" >
+        <action
+            android:id="@+id/action_orderFragment_to_orderDetailFragment"
+            app:destination="@id/orderDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/paymentFragment"
+        android:name="likelion.project.agijagi.purchase.PaymentFragment"
+        android:label="fragment_payment"
+        tools:layout="@layout/fragment_payment" >
+        <action
+            android:id="@+id/action_paymentFragment_to_purchaseCompleteFragment"
+            app:destination="@id/purchaseCompleteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderDetailFragment"
+        android:name="likelion.project.agijagi.order.OrderDetailFragment"
+        android:label="fragment_order_detail"
+        tools:layout="@layout/fragment_order_detail" >
+        <action
+            android:id="@+id/action_orderDetailFragment_to_orderFragment"
+            app:destination="@id/orderFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/customProductDetailFragment"
         android:name="likelion.project.agijagi.product.CustomProductDetailFragment"
         android:label="fragment_custom_product_detail"
@@ -110,4 +137,13 @@
         android:name="likelion.project.agijagi.sellermypage.ProductUpdateFragment"
         android:label="fragment_product_update"
         tools:layout="@layout/fragment_product_update" />
+    <fragment
+        android:id="@+id/purchaseCompleteFragment"
+        android:name="likelion.project.agijagi.purchase.PurchaseCompleteFragment"
+        android:label="fragment_purchase_complete"
+        tools:layout="@layout/fragment_purchase_complete" >
+        <action
+            android:id="@+id/action_purchaseCompleteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
