--- a/agijagi/app/src/main/res/layout/item_shopping_list.xml
+++ b/agijagi/app/src/main/res/layout/item_shopping_list.xml
@@ -10,7 +10,7 @@
         app:cardCornerRadius="8dp"
         android:backgroundTint="@color/jagi_white"
         app:strokeWidth="1dp"
-        app:strokeColor="@color/jagi_gray"
+        app:strokeColor="@color/jagi_black_42"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
