Fix: rebase conflict 재작업 (#40)
* Design: 사진추가 UI View수정

ImageView를 CardView로 수정함.
RecyclerView를 TableLayout으로 변경함.

* Merge branch 'develop' into feature/8_sellermypage_ProductAddFragment

* Fix: typo

참조 오타 수정

* Design: app theme color change

드롭다운 테마 수정.
인풋박스 테마 수정.

* Design: UI 세부 수정 #8

텍스트 사이즈 조정.
Tablelayout 사용.

* Squashed commit of the following:

commit 44a45f9d51061e56bf20fb16fc2f3ef2d22ce5fc
Author: June <66195205+june0103@users.noreply.github.com>
Date:   Fri Aug 25 17:08:26 2023 +0900

    Design: order, purchase UI 수정 #6 (#39)

    * Design: Order 및 purchase 화면 코드작업 #6

    * Design: payment UI 수정 #6
    버튼 visiblilty 수정
    Drop 힌트 수정
    margin 수정

    * Design: purchase UI #6
    결제완료화면 UI 작업

commit b1a6ebc77f200b55c5c5e9529a446753233fa105
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 16:00:28 2023 +0900

    Fix: color name 변경

commit 7a9f8c9fb7ef7dafd1a289851c1b6bd3d02296e6
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 15:24:31 2023 +0900

    Design: ShoppingList page를 Navigation Graph에 배치 #5
    mainactivity에 네비게이션 숨김 추가

commit 3ac1cac40edb17db3acc56d07a22d85afc601de9
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 15:22:33 2023 +0900

    Design: ProductOption 주문 제작 선택 화면 구현 #5

commit 42e735898af0a9524bfa606b4a9247f6f3021200
Author: jklom0326 <jklom0326@gmail.com>
Date:   Fri Aug 25 15:22:01 2023 +0900

    Design: ProductOption 기성품 선택 화면 구현 #5

* Fix: rebase conflict 재작업

--- a/agijagi/app/src/main/res/layout/item_shopping_list.xml
+++ b/agijagi/app/src/main/res/layout/item_shopping_list.xml
@@ -8,9 +8,9 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_margin="4dp"
         app:cardCornerRadius="8dp"
-        android:backgroundTint="@color/jagi_white_30"
+        android:backgroundTint="@color/jagi_white"
         app:strokeWidth="1dp"
-        app:strokeColor="@color/jagi_inactive"
+        app:strokeColor="@color/jagi_black_42"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
