--- a/agijagi/app/src/main/res/values/colors.xml
+++ b/agijagi/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="jagi_black_42">#6B000000</color>
     <color name="jagi_white_30">#4DFFFFFF</color>
 
+    <color name="jagi_white">#4DFFFFFF</color>
+
 </resources>
