--- a/agijagi/app/src/main/res/layout/item_wish_list.xml
+++ b/agijagi/app/src/main/res/layout/item_wish_list.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
+        android:id="@+id/button_wish_list_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
