--- a/agijagi/app/src/main/res/layout/fragment_payment.xml
+++ b/agijagi/app/src/main/res/layout/fragment_payment.xml
@@ -223,14 +223,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <AutoCompleteTextView
+                    android:id="@+id/dropdownTextView_payment_category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/narrow_box_rounded_button_stroke"
                     android:hint="카드사를 선택해주세요"
                     android:inputType="none"
-                    android:popupBackground = "@color/jagi_ivory"
-                    app:simpleItems="@array/payment_card_category"
-                    app:simpleItemSelectedColor = "@color/jagi_brown"/>
+                    app:simpleItems="@array/payment_card_category"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -251,7 +250,6 @@
                     android:background="@drawable/narrow_box_rounded_button_stroke"
                     android:hint="할부기간"
                     android:inputType="none"
-                    android:popupBackground = "@color/jagi_ivory"
                     app:simpleItems="@array/payment_card_detail_category" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -271,8 +269,7 @@
                     android:id="@+id/editinput_payment_category_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/narrow_box_rounded_button_stroke"
-                    android:textColorHint="@color/jagi_hint_color" />
+                    android:background="@drawable/narrow_box_rounded_button_stroke" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <View
@@ -351,8 +348,8 @@
                 android:id="@+id/line_payment"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
                 android:background="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
